# esw-efficient-servers

./: .gitignore  README  README.md  meson.build  pom.xml  shell.nix
src/main/avro/: measurements.avsc
src/main/cpp/: main.cpp  meson.build
src/main/java/cz/esw/serialization/: AppTest.java
src/main/java/cz/esw/serialization/handler/: AvroDataHandler.java  ProtoDataHandler.java
src/main/java/cz/esw/serialization/json/: DataType.java
src/main/proto/: measurements.proto
